# Hydra

./: .gitignore  CITATION.cff  README.md  pyproject.toml
hydra/: hf_utils.py
hydra/data/: build_hidden_states.py  partition_train_test.py
hydra/inference/: cli.py
hydra/model/hydra_heads/: cross_attention_head.py  eagle_head.py  prefix_mlp_head.py
hydra/train/: train.py  utils.py
llm_judge/: README.md  gen_model_answer_baseline.py  gen_model_answer_hydra.py
llm_judge/data/sharegpt/: question.jsonl
